style: criação da base todo-list

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Template Html Webpack</title>
   </head>
   <body>
-    <div>Hello world!</div>
-    <a href="./profile.html">profile</a>
+    <div class="box-list">
+      <h1>Lista de Tarefas</h1>
+      <input type="text" name="" id="tarefa">
+      <button class="add-tarefa">Adicionar tarefa</button>
+      <ul class="ul"></ul>
+  </div>
+
   </body>
 </html>
