--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Template Html Webpack</title>
-  </head>
-  <body>
-    <div class="box-list">
-      <h1>Lista de Tarefas</h1>
-      <input type="text" name="" id="tarefa">
-      <button class="add-tarefa">Adicionar tarefa</button>
-      <ul class="ul"></ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Template Html Webpack</title>
+</head>
+
+<body>
+  <div class="box-list">
+    <h1>Lista de Tarefas</h1>
+    <div class="box-new-tarefa">
+      <input type="text" name="" id="tarefa" placeholder="Adicionar nova tarefa">
+      <button class="add-tarefa"> + </button>
+
+    </div>
+    <ul class="ul"></ul>
   </div>
 
-  </body>
+</body>
+
 </html>
