style: adição e teste de pesquisa das tarefas

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="box-list">
     <h1>Lista de Tarefas</h1>
+    <input type="search" name="search" id="search" placeholder="Procurar tarefa"> 
     <div class="box-new-tarefa">
       <input type="text" name="" id="tarefa" placeholder="Adicionar nova tarefa">
       <button class="add-tarefa" > + </button>
