--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,10 @@
 <body>
   <div class="box-list">
     <h1>Lista de Tarefas</h1>
-    <input type="search" name="search" id="search" placeholder="Procurar tarefa"> 
+    <div class="box-search">
+      <input type="search" name="search" id="search" placeholder="Procurar tarefa">  <img src="https://img.icons8.com/pastel-glyph/40/000000/search--v2.png"/>
+    </div>
+   
     <div class="box-new-tarefa">
       <input type="text" name="" id="tarefa" placeholder="Adicionar nova tarefa">
       <button class="add-tarefa" > + </button>
